# Wildmenipedia

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/grokalternative/: api.py  embeddings.py  ingest.py  llm.py  rag.py  scrape.py  settings.py  stores.py
src/grokalternative/agents/: curation.py  orchestrator.py  personalization.py  prediction.py  research.py  verification.py
src/grokalternative/connectors/: sparql.py
src/grokalternative/templates/: chat.html  entity.html  index.html
tests/: test_ask.py  test_chat_streaming.py  test_citations_and_ui.py  test_embeddings.py  test_health.py  test_transformers.py
